@@ -92,6 +92,7 @@ httpclient.requester-pays-buckets-enabled=false
 # File/Object comparison properties
 ###
 
+#filecomparer.skip-symlinks=false
 #filecomparer.use-md5-files=false
 #filecomparer.generate-md5-files=false
 #filecomparer.skip-upload-of-md5-files=false
